Fix vertical alignment of checkbox text in wizards

--- a/assets/linker/styles/main.css
+++ b/assets/linker/styles/main.css
@@ -70,7 +70,14 @@ input {
   font-size: 11px;
   display: inline-block;
   position: relative;
-  top: -3px;
+  /*top: -3px;*/
+  margin: 0;
+  padding: 0;
+}
+@-moz-document url-prefix() { /* Checkboxtext vertical align fix for Firefox */
+  #regWizard .checkboxtext {
+    top: -4px;
+  }
 }
 #regWizard .styledSelect select {
   width: 115%;
